# malom

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: board.cpp  board.h  main.cpp
